--- a/index.html
+++ b/index.html
@@ -135,6 +135,23 @@
             overflow: hidden;
         }
 
+        .labelnigyou {
+            display: block;
+            margin-top: 3px;
+            /* ← 追加 */
+            margin-bottom: 10px;
+            padding: 3px;
+            font-weight: 600;
+            background-color: #13ca5e;
+            color: white;
+            border-radius: 6px;
+            font-size: 18px;
+            text-align: center;
+            text-indent: 0px;
+            position: relative;
+            overflow: hidden;
+        }
+
         .labelContent {
             display: block;
             margin-top: 10px;
@@ -872,22 +889,22 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">お参り同行+スタジオ2シーン 67000円+税</button>
         </div>
 
-        <div class="label">祈祷されるお子様<br>（お名前・月齢・性別）<span class="required">必須</span></div>
+        <div class="labelnigyou">祈祷されるお子様<br>（お名前・月齢・性別）<span class="required">必須</span></div>
         <textarea id="mugwortmainkid" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
 
-        <div class="label">付き添いご兄弟の<br>お名前、年齢、性別を<br>ご記入ください（任意）</div>
+        <div class="labelnigyou">付き添いご兄弟の<br>お名前、年齢、性別を<br>ご記入ください（任意）</div>
         <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
 
-        <div class="label">撮影に参加される方の<br>人数と続柄（任意）</div>
+        <div class="labelnigyou">撮影に参加される方の<br>人数と続柄（任意）</div>
         <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
 
-        <div class="label">同行撮影の方は<br>お参りされる神社名（任意）</div>
+        <div class="labelnigyou">同行撮影の方は<br>お参りされる神社名（任意）</div>
         <input type="text" id="mugwortshrinename" placeholder="神社名をご記入ください">
 
         <div class="label">ご祈祷の予約時間（任意）</div>
         <input type="time" id="mugwortreservationtime">
 
-        <div class="label">生花撮影ご希望の有無<br>（スタジオのみ）（任意）</div>
+        <div class="labelnigyou">生花撮影ご希望の有無<br>（スタジオのみ）（任意）</div>
         <div class="Freshflowerphotography-buttons">
             <button type="button" onclick="selectFreshflowerphotography(this)">有り</button>
             <button type="button" onclick="selectFreshflowerphotography(this)">無し</button>
