--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         }
 
         .visit-buttons,
+        .childsgender-buttons,
         .Caesareansection-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
@@ -201,6 +202,7 @@
         }
 
         .visit-buttons button,
+        .childsgender-buttons button,
         .Caesareansection-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
@@ -222,6 +224,7 @@
         }
 
         .visit-buttons button.active,
+        .childsgender-buttons button.active,
         .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
@@ -1475,6 +1478,21 @@ function selectCaesareansection(element) {
     selectedCaesareansectionTime = CaesareansectionTimes[CaesareansectionCount];
 
     console.log('選択された訪問回数の時間:', selectedCaesareansectionTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selectchildsgender(element) {
+    document.querySelectorAll('.childsgender-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    childsgenderCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedchildsgenderTime = childsgenderTimes[childsgenderCount];
+
+    console.log('選択された訪問回数の時間:', selectedchildsgenderTime);
 
     // カレンダーを更新するために取得する日付を渡す
     fetchAvailability(currentDate);
