--- a/index.html
+++ b/index.html
@@ -1606,13 +1606,12 @@ function selectpreparationphoto(element) {
         name: document.getElementById('name').value.trim(),
         phone: document.getElementById('phone').value.trim(),
         mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
-        childsgender: document.getElementById('childsgender').value.trim(),
         ziyuusonota: document.getElementById('ziyuusonota').value.trim(),
         Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, childsgenderCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
