--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                 data-en="Other (Reason for Visit)">その他（来店動機）</button>
         </div>
 
-        <div class="label" data-ja="\" 知人の紹介\"を選択された方は、紹介者のお名前をご記入ください。"
-            data-en='If "Referred by Friend" was selected, please write the referrer\' s name.'>
+        <div class="label" data-ja="知人の紹介を選択された方は、紹介者のお名前をご記入ください。"
+            data-en='If "Referred by Friend" was selected, please write the referrer' s name.'>
             "知人の紹介"を選択された方は、<br>紹介者のお名前をご記入ください。
         </div>
         <textarea id="message7" rows="1" placeholder="入力してください" data-ja-placeholder="入力してください"
@@ -560,40 +560,44 @@ Even during business hours, replies may be delayed while we are assisting other 
             budgetyCount = element.innerText;
         }
 
-        function submitForm() {
-            const message = document.getElementById('message').value;
-            const message2 = document.getElementById('message2').value;
-            const message3 = document.getElementById('message3').value;
-            const message4 = document.getElementById('message4').value;
-            const message5 = document.getElementById('message5').value;
-            const message6 = document.getElementById('message6').value;
-            const message7 = document.getElementById('message7').value;
-            const message8 = document.getElementById('message8').value;
-            storeCount: storeCount;
-            priorityCount: priorityCount;
-            demandCount: demandCount;
-            chanceCount: chanceCount;
-            IntroductionCount: IntroductionCount;
-            deliveryCount: deliveryCount;
-            budgetyCount: budgetyCount;
+function submitForm() {
+    const message = document.getElementById('message').value;
+    const message2 = document.getElementById('message2').value;
+    const message3 = document.getElementById('message3').value;
+    const message4 = document.getElementById('message4').value;
+    const message5 = document.getElementById('message5').value;
+    const message6 = document.getElementById('message6').value;
+    const message7 = document.getElementById('message7').value;
+    const message8 = document.getElementById('message8').value;
 
-            const formData = {
-                message,
-                message2,
-                message3,
-                message4,
-                message5,
-                message6,
-                message7,
-                message8,
-                storeCount,
-                priorityCount,
-                demandCount,
-                chanceCount,
-                IntroductionCount,
-                deliveryCount,
-                budgetyCount,
-            };
+    const storeCount = window.storeCount;
+    const priorityCount = window.priorityCount;
+    const demandCount = window.demandCount;
+    const chanceCount = window.chanceCount;
+    const IntroductionCount = window.IntroductionCount;
+    const deliveryCount = window.deliveryCount;
+    const budgetyCount = window.budgetyCount;
+
+    // data-ja取得
+    const submitButtonText = document.querySelector('.submit-button').getAttribute('data-ja');
+
+    const formData = {
+        message,
+        message2,
+        message3,
+        message4,
+        message5,
+        message6,
+        message7,
+        message8,
+        storeCount,
+        priorityCount,
+        demandCount,
+        chanceCount,
+        IntroductionCount,
+        deliveryCount,
+        budgetyCount,
+    };
 
             // 「同意しない」が選択されていたら警告を表示して中止
             if (budgetyCount === "同意しない") {
