--- a/index.html
+++ b/index.html
@@ -569,16 +569,14 @@ Even during business hours, replies may be delayed while we are assisting other 
             const message6 = document.getElementById('message6').value;
             const message7 = document.getElementById('message7').value;
             const message8 = document.getElementById('message8').value;
-            storeCount: storeCount;
-            priorityCount: priorityCount;
-            demandCount: demandCount;
-            chanceCount: chanceCount;
-            IntroductionCount: IntroductionCount;
-            deliveryCount: deliveryCount;
-            budgetyCount: budgetyCount;
+    const storeCount = document.querySelector('.store-buttons .selected')?.getAttribute('data-ja') || '';
+    const priorityCount = document.querySelector('.priority-buttons .selected')?.getAttribute('data-ja') || '';
+    const demandCount = document.querySelector('.demand-buttons .selected')?.getAttribute('data-ja') || '';
+    const chanceCount = document.querySelector('.chance-buttons .selected')?.getAttribute('data-ja') || '';
+    const IntroductionCount = document.querySelector('.Introduction-buttons .selected')?.getAttribute('data-ja') || '';
+    const deliveryCount = document.querySelector('.delivery-buttons .selected')?.getAttribute('data-ja') || '';
+    const budgetyCount = document.querySelector('.budgety-buttons .selected')?.getAttribute('data-ja') || '';
 
-    // data-ja取得
-    const submitButtonText = document.querySelector('.submit-button').getAttribute('data-ja');
 
             const formData = {
                 message,
