--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ Even during business hours, replies may be delayed while we are assisting other 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '2006872389-q3N4gLPO' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -569,14 +569,16 @@ Even during business hours, replies may be delayed while we are assisting other 
             const message6 = document.getElementById('message6').value;
             const message7 = document.getElementById('message7').value;
             const message8 = document.getElementById('message8').value;
-    const storeCount = document.querySelector('.store-buttons .selected')?.getAttribute('data-ja') || '';
-    const priorityCount = document.querySelector('.priority-buttons .selected')?.getAttribute('data-ja') || '';
-    const demandCount = document.querySelector('.demand-buttons .selected')?.getAttribute('data-ja') || '';
-    const chanceCount = document.querySelector('.chance-buttons .selected')?.getAttribute('data-ja') || '';
-    const IntroductionCount = document.querySelector('.Introduction-buttons .selected')?.getAttribute('data-ja') || '';
-    const deliveryCount = document.querySelector('.delivery-buttons .selected')?.getAttribute('data-ja') || '';
-    const budgetyCount = document.querySelector('.budgety-buttons .selected')?.getAttribute('data-ja') || '';
+            storeCount: storeCount;
+            priorityCount: priorityCount;
+            demandCount: demandCount;
+            chanceCount: chanceCount;
+            IntroductionCount: IntroductionCount;
+            deliveryCount: deliveryCount;
+            budgetyCount: budgetyCount;
 
+    // data-ja取得
+    const submitButtonText = document.querySelector('.submit-button').getAttribute('data-ja');
 
             const formData = {
                 message,
@@ -596,83 +598,63 @@ Even during business hours, replies may be delayed while we are assisting other 
                 budgetyCount,
             };
 
-            // 「同意しない」が選択されていたら警告を表示して中止
-            if (budgetyCount === "同意しない") {
-                alert('"同意する"を選択されていない場合、送信することができません');
-                return;
-            }
+// 「同意しない」が選択されていたら警告を表示して中止
+if (budgetyCount === "同意しない") {
+    alert('"同意する"を選択されていない場合、送信することができません');
+    return;
+}
 
-            // フォームデータのチェック
-            if (!formData.message) {
-                alert('ご来店日を入力してください。');
-                return;
-            }
+// 入力値をチェック（フォームのtext系）
+if (!message) {
+    alert('ご来店日を入力してください。');
+    return;
+}
+if (!message2) {
+    alert('お名前(漢字フルネーム)を入力してください。');
+    return;
+}
+if (!message3) {
+    alert('生年月日を入力してください。');
+    return;
+}
+if (!message4) {
+    alert('電話番号を入力してください。');
+    return;
+}
+if (!message5) {
+    alert('お住まいを入力してください。');
+    return;
+}
 
-            // フォームデータのチェック
-            if (!formData.message2) {
-                alert('お名前(漢字フルネーム)を入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.message3) {
-                alert('生年月日を入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.message4) {
-                alert('電話番号を入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.message5) {
-                alert('お住まいを入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.storeCount) {
-                alert('ご職業をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.priorityCount) {
-                alert('ご職業をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.demandCount) {
-                alert('来店動機をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.chanceCount) {
-                alert('来店頻度をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.IntroductionCount) {
-                alert('過去施術をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.deliveryCount) {
-                alert('薬品/ネイルでのアレルギーをご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.budgetyCount) {
-                alert('重要項目の同意をご選択ください。');
-                return;
-            }
+// 選択系項目のチェック（data-jaベース）
+if (!storeCount) {
+    alert('店舗をご選択ください。');
+    return;
+}
+if (!priorityCount) {
+    alert('ご職業をご選択ください。');
+    return;
+}
+if (!demandCount) {
+    alert('来店動機をご選択ください。');
+    return;
+}
+if (!chanceCount) {
+    alert('来店頻度をご選択ください。');
+    return;
+}
+if (!IntroductionCount) {
+    alert('過去施術をご選択ください。');
+    return;
+}
+if (!deliveryCount) {
+    alert('薬品/ネイルでのアレルギーをご選択ください。');
+    return;
+}
+if (!budgetyCount) {
+    alert('重要項目の同意をご選択ください。');
+    return;
+}
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
