--- a/index.html
+++ b/index.html
@@ -490,75 +490,61 @@ Even during business hours, replies may be delayed while we are assisting other 
             });
         }
 
-        function selectstore(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.store-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectstore(element) {
+    const buttons = document.querySelectorAll('.store-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            storeCount = element.innerText;
-        }
+    element.classList.add('active');
+    storeCount = element.getAttribute('data-ja'); // ← 日本語テキスト
+}
 
-        function selectpriority(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.priority-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectpriority(element) {
+    const buttons = document.querySelectorAll('.priority-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            priorityCount = element.innerText;
-        }
+    element.classList.add('active');
+    priorityCount = element.getAttribute('data-ja');
+}
 
-        function selectdemand(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.demand-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectdemand(element) {
+    const buttons = document.querySelectorAll('.demand-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            demandCount = element.innerText;
-        }
+    element.classList.add('active');
+    demandCount = element.getAttribute('data-ja');
+}
 
-        function selectchance(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.chance-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectchance(element) {
+    const buttons = document.querySelectorAll('.chance-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            chanceCount = element.innerText;
-        }
+    element.classList.add('active');
+    chanceCount = element.getAttribute('data-ja');
+}
 
-        function selectIntroduction(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.Introduction-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectIntroduction(element) {
+    const buttons = document.querySelectorAll('.Introduction-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            IntroductionCount = element.innerText;
-        }
+    element.classList.add('active');
+    IntroductionCount = element.getAttribute('data-ja');
+}
 
-        function selectdelivery(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.delivery-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectdelivery(element) {
+    const buttons = document.querySelectorAll('.delivery-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            deliveryCount = element.innerText;
-        }
+    element.classList.add('active');
+    deliveryCount = element.getAttribute('data-ja');
+}
 
-        function selectbudgety(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.budgety-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
+function selectbudgety(element) {
+    const buttons = document.querySelectorAll('.budgety-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
 
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            budgetyCount = element.innerText;
-        }
+    element.classList.add('active');
+    budgetyCount = element.getAttribute('data-ja');
+}
 
         function submitForm() {
             const message = document.getElementById('message').value;
