--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 }
 
         .week-button:hover {
-            background-color: #3e3f41;
+            background-color: #ffffff;
             transform: scale(1.15);
             /* ドーン！ってくらい拡大🔥 */
         }
@@ -348,7 +348,7 @@
         }
 
         .month-button:hover {
-            background-color: #3e3f41;
+            background-color: #ffffff;
             transform: scale(1.15);
             /* ドーン！ってくらい拡大🔥 */
         }
@@ -902,7 +902,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007568490-kAZrqpw3'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1340,7 +1340,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${selectedSymptomText},${irradiationsText}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n≪ISELY OSAKA≫\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${selectedSymptomText},${irradiationsText}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
