--- a/index.html
+++ b/index.html
@@ -1687,8 +1687,10 @@
                 ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
                 : 'メニュー未選択';
 
-            // irradiationsCountの整形（nullチェック）
-            const irradiationsText = formData.irradiationsCount || 'なし';
+    // irradiationsTextが存在する場合のみメッセージに追加
+    const irradiationsText = formData.irradiationsCount
+        ? `,${formData.irradiationsCount}`
+        : '';
 
             liff.sendMessages([{
                 type: 'text',
