--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     </div>
 
     <div class="container">
-        <h1>≪予約フォームC≫<br>予約フォーム
+        <h1>さｓ<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -819,6 +819,7 @@
         let visitCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = [];
+        let selectedCellsArray = []; // 選択順を保持
         let currentDate = new Date();
         let availabilityCache = {};
         let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
